--- a/app.json
+++ b/app.json
@@ -1,11 +1,14 @@
 {
   "expo": {
     "icon": "./assets/ios.png",
-    "name": "quirk",
-    "slug": "quirk",
+    "name": "DreemThoughts",
+    "slug": "dreemthoughts",
     "privacy": "unlisted",
     "sdkVersion": "31.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "2.0.6",
     "orientation": "portrait",
     "githubUrl": "https://github.com/Flaque/quirk",
@@ -15,33 +18,21 @@
       "resizeMode": "contain",
       "backgroundColor": "#F8A5C2"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "tech.econn.quirk",
-      "icon": "./assets/ios.png",
-      "publishBundlePath": "ios/quirk/Supporting/shell-app.bundle",
-      "publishManifestPath": "ios/quirk/Supporting/shell-app-manifest.json"
+      "bundleIdentifier": "com.dreem.dreemthoughts",
+      "icon": "./assets/ios.png"
     },
     "android": {
-      "package": "tech.econn.quirk",
+      "package": "com.dreem.dreemthoughts",
       "permissions": [],
       "icon": "./assets/android.png",
-      "versionCode": 17,
-      "publishBundlePath": "android/app/src/main/assets/shell-app.bundle",
-      "publishManifestPath": "android/app/src/main/assets/shell-app-manifest.json"
+      "versionCode": 18
     },
-    "hooks": {
-      "postPublish": [
-        {
-          "file": "sentry-expo/upload-sourcemaps",
-          "config": {
-            "organization": "evan-conrad",
-            "project": "quirk"
-          }
-        }
-      ]
-    },
-    "scheme": "exp4d07d66c4b23470393769aad813cee0c"
+    "scheme": "exp4d07d66c4b23470393769aad813cee0c",
+    "description": ""
   }
 }
