--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
       "ios",
       "android"
     ],
-    "version": "2.0.6",
+    "version": "1.0",
     "orientation": "portrait",
     "githubUrl": "https://github.com/Flaque/quirk",
     "primaryColor": "#F8A5C2",
@@ -24,13 +24,14 @@
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "com.dreem.dreemthoughts",
+      "buildNumber": "2",
       "icon": "./assets/ios.png"
     },
     "android": {
       "package": "com.dreem.dreemthoughts",
       "permissions": [],
       "icon": "./assets/android.png",
-      "versionCode": 18
+      "versionCode": 19
     },
     "scheme": "exp4d07d66c4b23470393769aad813cee0c",
     "description": ""
