--- a/package.json
+++ b/package.json
@@ -10,45 +10,49 @@
     "ship": "./scripts/ship.sh"
   },
   "dependencies": {
-    "@expo/vector-icons": "^8.0.0",
+    "@assets/images": "file:assets",
+    "@expo/vector-icons": "^10.0.0",
     "dayjs": "^1.8.14",
     "eslint-plugin-react-native-a11y": "^1.2.0",
-    "expo": "^31.0.6",
+    "expo": "^35.0.0",
+    "expo-analytics-segment": "~7.0.0",
+    "expo-constants": "~7.0.0",
+    "expo-localization": "~7.0.0",
     "expokit": "31.1.0",
     "i18n-js": "^3.2.1",
     "jest": "^24.7.1",
-    "jest-expo": "^32.0.0",
+    "jest-expo": "^35.0.0",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.11",
     "makecancelable": "^1.1.1",
     "prop-types": "^15.6.2",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-autogrow-textinput": "^5.2.0",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-iap": "3.0.0",
     "react-native-indicators": "^0.13.0",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-pose": "^0.9.0",
     "react-native-snap-carousel": "^3.8.0",
-    "react-native-svg": "^8.0.8",
+    "react-native-svg": "~9.9.2",
     "react-native-swiper": "^1.5.14",
     "react-navigation": "^3.0.8",
     "safe-json-stringify": "^1.2.0",
-    "sentry-expo": "^1.12.0",
+    "sentry-expo": "~2.0.0",
     "tslib": "^1.9.3",
-    "typescript": "^3.4.2",
-    "uuid": "^3.3.2",
-    "@assets/images": "file:assets"
+    "typescript": "^3.4.5",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/expo": "^32.0.10",
     "@types/expo__vector-icons": "^6.2.3",
     "@types/jest": "^24.0.11",
-    "@types/react": "^16.7.18",
-    "@types/react-native": "^0.57.22",
+    "@types/react": "^16.8.23",
+    "@types/react-native": "^0.57.65",
     "@types/react-navigation": "^3.0.1",
     "babel-eslint": "^10.0.1",
-    "babel-preset-expo": "^5.0.0",
+    "babel-preset-expo": "^7.0.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.11.1",
     "prettier": "1.15.3",
