--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^35.0.0",
     "expo-analytics-segment": "~7.0.0",
     "expo-constants": "~7.0.0",
+    "expo-haptics": "~7.0.0",
     "expo-localization": "~7.0.0",
     "expokit": "31.1.0",
     "i18n-js": "^3.2.1",
